--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -835,6 +835,38 @@
     <string name="go_back_from_bank">Are you sure you want to go back?</string>
     <string name="wait_for_next_request">For the security of your account, your bank will allow you to Check Out again only after 5 minutes. Please try again after 5 minutes.</string>
     <string name="alert_are_you_sure_to_delete_transactions">Are you sure you want to Delete the Selected Transaction Records?</string>
+    <string name="debit_cart_info">When you make an investment in Tarrakki Zyaada, you are eligible to apply for a Reliance Anytime Money Card, powered by Tarrakki, Reliance Mutual Fund, and Visa.\n\nThis card is linked to the Reliance Liquid Fund, and allows you to instantly withdraw or spend money against your mutual fund investment. The card is valid at Visa enabled ATMs and merchant outlets all over India.</string>
+    <string name="apply_for_debit_cart">Apply for debit card</string>
+    <string name="apply_now">Apply Now</string>
+    <string name="apply">Apply</string>
+    <string name="choose_folio_">Choose Folio*</string>
+    <string name="name_on_card_">Name on Card*</string>
+    <string name="mothers_maiden_name">Mothers Maiden Name*</string>
+    <string name="what_is_tarrakki_zyaada">What is Tarrakki Zyaada?</string>
+    <string name="what_is_tarrakki_zyaada_details">
+        When you park your money in Tarrakki Zyaada, your money will be invested in the Reliance Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
+        \n\n
+        With your Tarrakki Zyaada investment, you get a Reliance Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
+        \n\n
+        This card is linked to the Reliance Liquid Fund, and allows you to instantly withdraw or spend money against your mutual fund investment. The card is valid at Visa enabled ATMs and merchant outlets all over India.
+        \n\n
+        Its like parking your idle money in a Savings Bank Account, but with the opportunity to earn almost double the returns.
+    </string>
+    <string name="where_is_my_money_invested">Where is my money invested?</string>
+    <string name="where_is_my_money"><![CDATA[
+        Your money will be invested in a Liquid Fund. Liquid Funds invest in money market instruments such as certificates of deposits, treasury bills, commercial papers, and term deposits with maturities up to 90 days.
+        \n
+        • Lowest interest risk compared to other classes of debt funds
+        • Invests in fixed income securities with short maturity periods
+        • No Lock-in, No Entry and Exit Load
+        • Minimum Investment —> 2100
+        \nThe Reliance Liquid Fund primarily invests in securities with high credit-worthiness (AAA rated securities and equivalent).
+        Tarrakki Savings Fixed Zyaada Account Deposit
+    ]]></string>
+    <string name="tarrakki_zyaada">Tarrakki Zyaada</string>
+    <string name="invest_and_save_now">Invest and save now</string>
+    <string name="faqs">FAQs</string>
+    <string name="reliance_liquid_fund_performance">Reliance Liquid Fund Performance</string>
 
     <!--<string name="select_country">Select Country</string>-->
 </resources>
