--- a/supportcompactlibrary/src/main/res/values/strings.xml
+++ b/supportcompactlibrary/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Supportcompact Library</string>
+    <string name="app_name">Tarrakki</string>
     <string name="ok">OK</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
