--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Tarrakki</string>
+    <string name="app_name">tarrakki</string>
 
     <!--Facebook Details-->
     <string name="facebook_app_id">387985278434317</string>
@@ -897,6 +897,9 @@
     <string name="please_enter_your_state">Please enter your state</string>
     <string name="please_select_your_country">Please select your country</string>
     <string name="disclaimer_this_address_details">Disclaimer: This address details for your Mutual Fund investment will be as per your KYC records. In case you wish to change address for your KYC records, please send a request to support@tarrakki.com.</string>
+    <string name="change_email_id">Change Email Id</string>
+    <string name="change_mobile_number">Change Mobile Number</string>
+    <string name="enter_email_id">Enter Email Id</string>
 
     <!--<string name="select_country">Select Country</string>-->
 </resources>
