--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -846,32 +846,26 @@
     <string name="what_is_tarrakki_zyaada">What is Tarrakki Zyaada?</string>
     <string name="what_is_tarrakki_zyaada_details">
         When you park your money in Tarrakki Zyaada, your money will be invested in the Reliance Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
-        \n\n
-        With your Tarrakki Zyaada investment, you get a Reliance Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
-        \n\n
-        This card is linked to the Reliance Liquid Fund, and allows you to instantly withdraw or spend money against your mutual fund investment. The card is valid at Visa enabled ATMs and merchant outlets all over India.
-        \n\n
-        Its like parking your idle money in a Savings Bank Account, but with the opportunity to earn almost double the returns.
+        \n\nWith your Tarrakki Zyaada investment, you get a Reliance Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
+        \n\nThis card is linked to the Reliance Liquid Fund, and allows you to instantly withdraw or spend money against your mutual fund investment. This card is valid at Visa enabled ATMs and merchant outlets all over India.
+        \n\nIt\'s like parking your idle money in a Savings Bank Account, but with the opportunity to earn almost double the returns.
     </string>
     <string name="where_is_my_money_invested">Where is my money invested?</string>
-    <string name="where_is_my_money"><![CDATA[
+    <string name="where_is_my_money">
         Your money will be invested in a Liquid Fund. Liquid Funds invest in money market instruments such as certificates of deposits, treasury bills, commercial papers, and term deposits with maturities up to 90 days.
-        \n
-        • Lowest interest risk compared to other classes of debt funds
-        • Invests in fixed income securities with short maturity periods
-        • No Lock-in, No Entry and Exit Load
-        • Minimum Investment —> 2100
-        \nThe Reliance Liquid Fund primarily invests in securities with high credit-worthiness (AAA rated securities and equivalent).
-        Tarrakki Savings Fixed Zyaada Account Deposit
-    ]]></string>
+        \n\n\u2022 Lowest interest risk compared to other classes of debt funds
+        \n\u2022 Invests in fixed income securities with short maturity periods
+        \n\u2022 No Lock-in, No Entry and Exit Load
+        \n\u2022 Minimum Investment of 2500 ONLY!
+    </string>
     <string name="tarrakki_zyaada">Tarrakki Zyaada</string>
     <string name="invest_and_save_now">Invest and save now</string>
     <string name="faqs">FAQs</string>
     <string name="reliance_liquid_fund_performance">Reliance Liquid Fund Performance</string>
     <string name="key_benefits">Key Benefits</string>
-    <string name="higher_returns_than_your_bank">Higher returns than your bank</string>
+    <string name="higher_returns_than_your_bank">Potentially Higher Returns than your Savings Account or Fixed Deposit</string>
     <string name="debit_card_powered_by_hdfc_bank_amp_visa_towards_your_investment"><![CDATA[Debit card powered by HDFC Bank & Visa towards your investment]]></string>
-    <string name="instant_redemption_redemption">Instant Redemption Redemption</string>
+    <string name="instant_redemption_redemption">Instant Redemption</string>
     <string name="sip_start_date">Your SIP will start on April</string>
     <string name="go_to_unpaid_transactions">Go to unpaid transactions</string>
     <string name="cut_of_time_title">CUT OFF TIME HAS PASSED</string>
@@ -900,6 +894,14 @@
     <string name="change_email_id">Change Email Id</string>
     <string name="change_mobile_number">Change Mobile Number</string>
     <string name="enter_email_id">Enter Email Id</string>
+    <string name="powered_by_tarrakki_reliance_mutual_fund_and_visa">➡ Powered by Tarrakki, Reliance Mutual Fund, and Visa</string>
+    <string name="symbol_a">∗ -</string>
+    <string name="symbol_b">∗∗ -</string>
+    <string name="symbol_c">∗∗∗ -</string>
+    <string name="daily_purchase_limit_of_50">Daily purchase limit of 50% of the balance or ₹1,00,000 whichever is lower.</string>
+    <string name="upto_50_of_the_balance_or_up">Upto 50% of the balance, or up to permissible limit determined by the bank, or ₹50,000, whichever is lower.</string>
+    <string name="upto_u20b950_000_or_90_of">Upto ₹50,000 or 90% of the current investment value, whichever is lower.</string>
+    <string name="to_know_more_about_reliance_liquid_fund_click_here">To know more about Reliance Liquid Fund, <font color='#4EB95D'><u><a href='https://www.google.com/'>click here.</a></u></font></string>
 
     <!--<string name="select_country">Select Country</string>-->
 </resources>
