--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -873,6 +873,7 @@
         \n\u2022 Minimum Investment of 100 ONLY!
     </string>
     <string name="tarrakki_zyaada">Tarrakki Zyaada</string>
+    <string name="tarrakki_zyaada_investment">Tarrakki Zyaada Investment</string>
     <string name="invest_and_save_now">Invest and save now</string>
     <string name="faqs">FAQs</string>
     <string name="reliance_liquid_fund_performance">Reliance Liquid Fund Performance</string>
@@ -965,5 +966,7 @@
     <string name="fixed_ndeposit">Fixed\nDeposit</string>
     <string name="write_your_reply_here">Write your reply here..</string>
     <string name="ticket_conversation">Ticket Conversation</string>
+    <string name="direct_investment">Direct Investment</string>
+    <string name="goal_base_investment">Goal Based Investment</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
