1. Resolved Bugs as per client feedback. 2. Implemented some changes as per client feedback. 3. Implementing APIs of Portfolio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
 
     <string name="app_description">Tarrakki is a comprehensive Wealth Management and Financial Planning App that enables you to make calculated, goal based investments, with just a few taps.</string>
-    <string name="invite_your_friend">Invite Your Friends to Invest Using the Tarrakki App.</string>
+    <string name="invite_your_friend">Investing has never been easier! I am using the Tarrakki app to invest, You should try it out. Towards Prosperity!</string>
     <string name="mutual_funds">Mutual Funds</string>
     <string name="home">Home</string>
     <string name="plan">Plan</string>
