1: Redirect to the transaction history with “All”  tab selected when the back arrow is pressed. 2: Test redeem in the local environment. 3: Implement the Apply For Debit Card flow in the portfolio. 4: Implement the pending changes of the portfolio. 5: Check the redemption status, purchase transaction statues & the remarks for the failed transaction in Transaction History & the transaction status screens.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -971,5 +971,6 @@
     <string name="goal_base_investment">Goal Based Investment</string>
     <string name="amount_credited_to">Amount credited to</string>
     <string name="redeemed_amount">Redeemed amount</string>
+    <string name="insta_redeem_is_not_availble">Insta-Redemption is not available for this folio now.</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
